--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zhaiduting/promise-gif",
-  "version": "6.0.1",
+  "version": "7.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,9 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "devDependencies": {
-    "@zhaiduting/promise-adj": "github:zhaiduting/promise-adj"
+  "devDependencies": {},
+  "dependencies": {
+    "@zhaiduting/promise-adj": "github:zhaiduting/promise-adj",
+    "@zhaiduting/wear-pin": "github:zhaiduting/wear-pin"
   }
 }
